Link tickets and users upon ticket creation

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,6 +2,7 @@
 @import "bootstrap";
 @import "font-awesome";
 @import "projects";
+@import "tickets";
 @import "responsive";
 
 header {
@@ -62,3 +63,5 @@ max-width: 500px;
 body {
 	padding-top: 70px;
 }
+
+
